fix(user): fix cropped descenders of letters of user digest

--- a/src/components/Tag/styles.module.css
+++ b/src/components/Tag/styles.module.css
@@ -1,9 +1,7 @@
 .tag .name {
   @mixin line-clamp;
+  @mixin fix-cropped-letters;
 
-  /* FIXME: fix cropped descenders of letters  */
-  padding-bottom: 0.12em;
-  margin-bottom: -0.12rem;
   line-height: inherit;
 }
 
